complete ingestion process

--- a/etl_souce/ingestion.ipynb
+++ b/etl_souce/ingestion.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ingestion Step"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Input** : tblName -> name of table to ingest data to HDFS, executionDate -> date to partition in DHFS Datalake <br>\n",
+    "**Output**: data in DHFS Datalake is updated\n",
+    "1. Load data from PostgreSQL in **tblName** table.\n",
+    "2. Update data in **tblName** folder with these below steps:  \n",
+    " - 2.1 Get the lastest record_id in datalake (if **tblName** folder isn't empty) \n",
+    " - 2.2 Get the lastest records in PostgreSQL\n",
+    " - 2.3 Append records in PostreSQL from lastest record_id in HDFS Datalake"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Neccessary Libraris"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,32 +37,39 @@
     "from pyspark import SparkContext, SQLContext, SparkConf\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import lit, max\n",
-    "import sys"
+    "import sys\n",
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Receive 2 arguments: tblName, executionDate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 1\n",
     "tblName = input(\"Input table name from PostgreSQL which load to HDFS: \") \n",
     "executionDate = input(\"Input date you want ingest data from PostgreSQL to HDFS DataLake: \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2023-07-23'"
+       "'2023-07-25'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,26 +91,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data from tblName table in PostgreSQL"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/07/23 21:53:53 WARN Utils: Your hostname, bigdata-etl resolves to a loopback address: 127.0.1.1; using 192.168.85.128 instead (on interface ens33)\n",
-      "23/07/23 21:53:53 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/07/26 00:46:05 WARN Utils: Your hostname, bigdata-etl resolves to a loopback address: 127.0.1.1; using 192.168.85.128 instead (on interface ens33)\n",
+      "23/07/26 00:46:05 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/07/23 21:53:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/07/26 00:46:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
    "source": [
-    "## 2. Ingest data from PostgreSQL to HDFS Datalake\n",
-    "### create spark session\n",
-    "postgres_data_spark = pyspark.sql.SparkSession \\\n",
+    "# create spark session\n",
+    "spark = pyspark.sql.SparkSession \\\n",
     "   .builder \\\n",
     "   .appName(\"Ingestion - from Postgres to HDFS\") \\\n",
     "   .config('spark.driver.extraClassPath', \"postgresql-42.6.0.jar\") \\\n",
@@ -85,12 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##read table from db using spark jdbc\n",
-    "df = postgres_data_spark.read \\\n",
+    "# read table from db using spark jdbc\n",
+    "df = spark.read \\\n",
     "   .format(\"jdbc\") \\\n",
     "   .option(\"url\", \"jdbc:postgresql://localhost:5432/my_company\") \\\n",
     "   .option(\"dbtable\", tblName) \\\n",
@@ -102,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 0:>                                                          (0 + 1) / 1]\r"
      ]
     },
     {
@@ -133,6 +173,13 @@
       "only showing top 10 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -140,57 +187,193 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Test\n",
-    "# spark=SparkSession.builder.appName(\"parquetFile\").getOrCreate()\n",
-    "data =[(\"James \",\"\",\"Smith\",\"36636\",\"M\",3000),\n",
-    "              (\"Michael \",\"Rose\",\"\",\"40288\",\"M\",4000),\n",
-    "              (\"Robert \",\"\",\"Williams\",\"42114\",\"M\",4000),\n",
-    "              (\"Maria \",\"Anne\",\"Jones\",\"39192\",\"F\",4000),\n",
-    "              (\"Jen\",\"Mary\",\"Brown\",\"\",\"F\",-1)]\n",
-    "columns=[\"firstname\",\"middlename\",\"lastname\",\"dob\",\"gender\",\"salary\"]\n",
-    "df=postgres_data_spark.createDataFrame(data,columns)"
+    "### Update data in tblName folder in DHFS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get the lastest record_id in datalake (if **tblName** folder isn't empty) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to interact with hdfs storage\n",
+    "def run_cmd(args_list):\n",
+    "    print('Running system command: {0}'.format(' '.join(args_list)))\n",
+    "    proc = subprocess.Popen(args_list, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "    s_output, s_err = proc.communicate()\n",
+    "    s_return = proc.returncode\n",
+    "    return s_return, s_output, s_err"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tblLocation = f'hdfs://localhost:9000/datalake/{tblName}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running system command: hdfs dfs -du -s hdfs://localhost:9000/datalake/orders\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check whether folder exist of not\n",
+    "(ret, out, err) = run_cmd(['hdfs', 'dfs', '-du', '-s', tblLocation])\n",
+    "exists = True if len(str(out).split()) > 1 else False\n",
+    "print(exists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tblQuery = \"\"\n",
+    "if exists:\n",
+    "    datalake_df = spark.read.format('parquet').load(tblLocation)\n",
+    "    record_id = datalake_df.agg(max(\"id\")).head()[0]\n",
+    "    tblQuery = f\"SELECT * FROM {tblName} WHERE id > {record_id} AS tmp\"\n",
+    "else:\n",
+    "    tblQuery = f\"SELECT * FROM {tblName} AS tmp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DataFrame[firstname: string, middlename: string, lastname: string, dob: string, gender: string, salary: bigint]"
+       "'SELECT * FROM orders AS tmp'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "tblQuery"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get the lastest records in PostgreSQL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.write.mode(\"overwrite\").parquet(\"hdfs://localhost:9000/tmp/\")"
+    "jdbc_df = spark.read \\\n",
+    "   .format(\"jdbc\") \\\n",
+    "   .option(\"url\", \"jdbc:postgresql://localhost:5432/my_company\") \\\n",
+    "   .option(\"dbtable\", tblName) \\\n",
+    "   .option(\"user\", \"postgres\") \\\n",
+    "   .option(\"password\", \"loc//14122000\") \\\n",
+    "   .option(\"driver\", \"org.postgresql.Driver\") \\\n",
+    "   .load(tblQuery)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 5:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+--------+----------+----------+\n",
+      "| id|quantity|created_at|product_id|\n",
+      "+---+--------+----------+----------+\n",
+      "|  1|       1|2009-01-25|    331449|\n",
+      "|  2|       1|2019-09-13|    182256|\n",
+      "|  3|       2|2004-05-04|    108399|\n",
+      "|  4|       3|2011-02-20|     81461|\n",
+      "|  5|       3|2007-07-11|    136274|\n",
+      "+---+--------+----------+----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "jdbc_df.show(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Append records in PostreSQL from lastest record_id in HDFS Datalake"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "output_df = jdbc_df.withColumn(\"year\", lit(year)).withColumn(\"month\", lit(month)).withColumn(\"day\", lit(day))\n",
+    "output_df.write.partitionBy(\"year\", \"month\", \"day\").mode(\"append\").parquet(tblLocation)"
+   ]
   }
  ],
  "metadata": {
