--- a/etl_souce/spark_test.ipynb
+++ b/etl_souce/spark_test.ipynb
@@ -2,14 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 1:>                                                          (0 + 1) / 1]\r"
+      "23/07/24 13:10:40 WARN Utils: Your hostname, bigdata-etl resolves to a loopback address: 127.0.1.1; using 192.168.85.128 instead (on interface ens33)\n",
+      "23/07/24 13:10:41 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/07/24 13:10:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "                                                                                \r"
      ]
     },
     {
@@ -33,13 +38,6 @@
       "only showing top 10 rows\n",
       "\n",
       "None\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
