update transformation code

--- a/etl_souce/transformation.ipynb
+++ b/etl_souce/transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2019-09-13'"
+       "'2020-05-12'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,24 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition.mode\n",
-      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition\n",
-      "23/08/01 21:37:57 WARN Utils: Your hostname, bigdata-etl resolves to a loopback address: 127.0.1.1; using 192.168.85.128 instead (on interface ens33)\n",
-      "23/08/01 21:37:57 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/08/01 21:38:01 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/08/01 21:38:13 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create spark session\n",
     "spark = SparkSession \\\n",
@@ -87,17 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load data to spark df\n",
     "orders_df = spark.read.parquet('hdfs://localhost:9000/datalake/orders').drop(\"year\", \"month\", \"day\")\n",
@@ -108,16 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -142,16 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 5:>                                                          (0 + 1) / 1]\r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -183,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,14 +213,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 8:=========>         (1 + 1) / 2][Stage 11:>                 (0 + 1) / 2]\r"
+      "[Stage 40:=============================>                            (1 + 1) / 2]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+--------+----------+----------+-------+------+-----------+--------+-------+------+---------+--------------------+--------+------------+------------+------+\n",
+      "|     id|quantity|created_at|product_id|     id| total|    payment|order_id|user_id|    id|     make|               model|category|inventory_id|inv_quantity|    id|\n",
+      "+-------+--------+----------+----------+-------+------+-----------+--------+-------+------+---------+--------------------+--------+------------+------------+------+\n",
+      "|1288949|       1|2019-09-13|     31260|1288949|728643|credit_card| 1288949|  82492| 31260|      BMW|                X6 M|     SUV|      978802|         384|978802|\n",
+      "| 331439|       3|2019-09-13|    283893| 331439|858674| instalment|  331439| 136994|283893|    Acura|                 TSX|   Sedan|      997702|         255|997702|\n",
+      "| 462327|       1|2019-09-13|    196266| 462327|974749|credit_card|  462327| 269750|196266|    MAZDA|B-Series Regular Cab|  Pickup|      981583|         371|981583|\n",
+      "|1601604|       1|2019-09-13|    141253|1601604|482948| instalment| 1601604| 198968|141253|Chevrolet|             Beretta|   Coupe|      990654|         109|990654|\n",
+      "|1776090|       2|2019-09-13|     97582|1776090|462752|       cash| 1776090| 179206| 97582|    Buick|             LeSabre|   Sedan|      992371|         341|992371|\n",
+      "+-------+--------+----------+----------+-------+------+-----------+--------+-------+------+---------+--------------------+--------+------------+------------+------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -267,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,60 +281,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = spark.sql(\"show databases\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spark.sql(\"create database test\")\n",
+    "# df1 = spark.sql(\"show databases\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df1.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = spark.sql(\"describe database reports\")\n",
+    "# df.select('info_value').collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spark.sql(\"create database reports\")\n",
+    "# df2 = spark.sql(\"describe database reports\")\n",
+    "# df2.select('info_value').collect()\n",
+    "# spark.sql(\"show databases\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "+---------+\n",
-      "|namespace|\n",
-      "+---------+\n",
-      "|  default|\n",
-      "|    haha1|\n",
-      "|  reports|\n",
-      "|     test|\n",
-      "|    test1|\n",
-      "+---------+\n",
-      "\n"
+      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_database: reports\n",
+      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_database: reports\t\n",
+      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:14 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:14 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:15 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:15 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/08/03 01:25:44 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:44 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:44 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:44 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:45 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:45 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:45 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:45 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:45 INFO Hive: New loading path = hdfs://localhost:9000/user/hive/warehouse/reports.db/daily_gross_revenue/.hive-staging_hive_2023-08-03_01-25-15_104_2323326712391549837-1/-ext-10000/year=2020/month=05/day=12 with partSpec {year=2020, month=05, day=12}\n",
+      "23/08/03 01:25:46 INFO HiveMetaStore: 2: get_partition_with_auth : db=reports tbl=daily_gross_revenue[2020,05,12]\n",
+      "23/08/03 01:25:46 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_partition_with_auth : db=reports tbl=daily_gross_revenue[2020,05,12]\t\n",
+      "23/08/03 01:25:46 WARN HiveConf: HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
+      "23/08/03 01:25:46 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "23/08/03 01:25:46 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "23/08/03 01:25:46 INFO HiveMetaStore: 2: Opening raw store with implementation class:org.apache.hadoop.hive.metastore.ObjectStore\n",
+      "23/08/03 01:25:46 INFO ObjectStore: ObjectStore, initialize called\n",
+      "23/08/03 01:25:46 INFO MetaStoreDirectSql: Using direct SQL, underlying DB is DERBY\n",
+      "23/08/03 01:25:46 INFO ObjectStore: Initialized ObjectStore\n",
+      "23/08/03 01:25:46 INFO FileUtils: Creating directory if it doesn't exist: hdfs://localhost:9000/user/hive/warehouse/reports.db/daily_gross_revenue/year=2020/month=05/day=12\n",
+      "23/08/03 01:25:47 INFO HiveMetaStore: 2: add_partition : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:47 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=add_partition : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:48 INFO Hive: Loaded 1 partitions\n",
+      "23/08/03 01:25:48 INFO HiveMetaStore: 0: get_database: reports\n",
+      "23/08/03 01:25:48 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_database: reports\t\n",
+      "23/08/03 01:25:48 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:48 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n",
+      "23/08/03 01:25:48 INFO HiveMetaStore: 0: get_table : db=reports tbl=daily_gross_revenue\n",
+      "23/08/03 01:25:48 INFO audit: ugi=hadoop\tip=unknown-ip-addr\tcmd=get_table : db=reports tbl=daily_gross_revenue\t\n"
      ]
     }
    ],
-   "source": [
-    "df = spark.sql(\"show databases\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(info_value='spark_catalog'),\n",
-       " Row(info_value='test'),\n",
-       " Row(info_value=''),\n",
-       " Row(info_value='file:/home/hadoop/Desktop/cars-sale-etl/etl_souce/spark-warehouse/test.db'),\n",
-       " Row(info_value='hadoop')]"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = spark.sql(\"describe database test\")\n",
-    "df.select('info_value').collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "result_df.write \\\n",
     "    .format(\"hive\") \\\n",
