update code process, add transformation.py

--- a/etl_souce/ingestion.ipynb
+++ b/etl_souce/ingestion.ipynb
@@ -11,13 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Input** : tblName -> name of table to ingest data to HDFS, executionDate -> date to partition in DHFS Datalake <br>\n",
+    "**Input** : `tblName` -> name of table to ingest data to HDFS, `executionDate` -> date to partition in DHFS Datalake <br>\n",
     "**Output**: data in DHFS Datalake is updated\n",
-    "1. Load data from PostgreSQL in **tblName** table.\n",
-    "2. Update data in **tblName** folder with these below steps:  \n",
-    " - 2.1 Get the lastest record_id in datalake (if **tblName** folder isn't empty) \n",
-    " - 2.2 Get the lastest records in PostgreSQL\n",
-    " - 2.3 Append records in PostreSQL from lastest record_id in HDFS Datalake"
+    "- Load data from PostgreSQL in **tblName** table.\n",
+    "- Update data in **tblName** folder with these below steps:  \n",
+    "    - Get the lastest record_id in datalake (if **tblName** folder isn't empty) \n",
+    "    - Get the lastest records in PostgreSQL\n",
+    "    - Append records in PostreSQL from lastest record_id in HDFS Datalake"
    ]
   },
   {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,6 @@
     "tblName = input(\"Input table name from PostgreSQL which load to HDFS: \") \n",
     "executionDate = input(\"Input date you want ingest data from PostgreSQL to HDFS DataLake: \")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -106,15 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/08/03 14:29:46 WARN Utils: Your hostname, bigdata-etl resolves to a loopback address: 127.0.1.1; using 192.168.85.128 instead (on interface ens33)\n",
+      "23/08/03 14:29:46 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/08/03 14:29:49 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "# create spark session\n",
     "spark = pyspark.sql.SparkSession \\\n",
     "   .builder \\\n",
     "   .appName(\"Ingestion - from Postgres to HDFS\") \\\n",
-    "   .config('spark.driver.extraClassPath', \"postgresql-42.6.0.jar\") \\\n",
+    "   .config('spark.driver.extraClassPath', \"/postgre_driver_file/postgresql-42.6.0.jar\") \\\n",
     "   .getOrCreate()"
    ]
   },
