--- a/etl_souce/transformation.ipynb
+++ b/etl_souce/transformation.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transformation step"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Input** : `executionDate` -> transfrom data at this date to save to Data Warehouse <br>\n",
+    "**Output**: data at `executionDate` is added in Data Warehouse with partition: year-> month->day <br>\n",
+    "**Code process**:\n",
+    "- Load data from HDFS Data Lake at `executionDate` with Spark to Dataframes.\n",
+    "- Transfrom data from DataFrames has just create with these steps:  \n",
+    "    - Join dataframes\n",
+    "    - Aggreate data to get important figures\n",
+    "    - Prepare results dataframe by select important columns\n",
+    "- Write results dataframe to Data Warehouse at *daily_gross_revenue* table in *reports* database with partition: year->month-> day"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Neccessary Libraris"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -9,6 +38,13 @@
     "import pyspark.sql.functions as f\n",
     "from pyspark.sql import SparkSession, SQLContext\n",
     "from pyspark import SparkConf, SparkContext, HiveContext"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Receive executionDate argument"
    ]
   },
   {
@@ -53,6 +89,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data from HDFS Data Lake"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -66,8 +109,7 @@
     "   .config('hive.exec.dynamic.partition.mode', 'nonstrict') \\\n",
     "   .config('spark.sql.warehouse.dir', 'hdfs://localhost:9000/user/hive/warehouse') \\\n",
     "   .enableHiveSupport() \\\n",
-    "   .getOrCreate()\n",
-    "#   "
+    "   .getOrCreate()"
    ]
   },
   {
@@ -199,6 +241,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggreate data to get important figures"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -209,47 +258,6 @@
     "    .join(order_detail_df, orders_df[\"id\"] == order_detail_df[\"order_id\"], \"inner\") \\\n",
     "    .join(products_df, orders_df[\"product_id\"] == products_df[\"id\"], \"inner\") \\\n",
     "    .join(inventory_df.select(f.col(\"quantity\").alias(\"inv_quantity\"), f.col(\"id\")), products_df[\"inventory_id\"] == inventory_df[\"id\"], \"inner\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 40:=============================>                            (1 + 1) / 2]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+--------+----------+----------+-------+------+-----------+--------+-------+------+---------+--------------------+--------+------------+------------+------+\n",
-      "|     id|quantity|created_at|product_id|     id| total|    payment|order_id|user_id|    id|     make|               model|category|inventory_id|inv_quantity|    id|\n",
-      "+-------+--------+----------+----------+-------+------+-----------+--------+-------+------+---------+--------------------+--------+------------+------------+------+\n",
-      "|1288949|       1|2019-09-13|     31260|1288949|728643|credit_card| 1288949|  82492| 31260|      BMW|                X6 M|     SUV|      978802|         384|978802|\n",
-      "| 331439|       3|2019-09-13|    283893| 331439|858674| instalment|  331439| 136994|283893|    Acura|                 TSX|   Sedan|      997702|         255|997702|\n",
-      "| 462327|       1|2019-09-13|    196266| 462327|974749|credit_card|  462327| 269750|196266|    MAZDA|B-Series Regular Cab|  Pickup|      981583|         371|981583|\n",
-      "|1601604|       1|2019-09-13|    141253|1601604|482948| instalment| 1601604| 198968|141253|Chevrolet|             Beretta|   Coupe|      990654|         109|990654|\n",
-      "|1776090|       2|2019-09-13|     97582|1776090|462752|       cash| 1776090| 179206| 97582|    Buick|             LeSabre|   Sedan|      992371|         341|992371|\n",
-      "+-------+--------+----------+----------+-------+------+-----------+--------+-------+------+---------+--------------------+--------+------------+------------+------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
-   "source": [
-    "pre_df.show(5)"
    ]
   },
   {
@@ -280,62 +288,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# df = spark.sql(\"show databases\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spark.sql(\"create database test\")\n",
-    "# df1 = spark.sql(\"show databases\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df1.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = spark.sql(\"describe database reports\")\n",
-    "# df.select('info_value').collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spark.sql(\"create database reports\")\n",
-    "# df2 = spark.sql(\"describe database reports\")\n",
-    "# df2.select('info_value').collect()\n",
-    "# spark.sql(\"show databases\").show()"
+    "### Write results dataframe to Data Warehouse"
    ]
   },
   {
@@ -403,13 +359,6 @@
     "    .mode(\"append\") \\\n",
     "    .saveAsTable(\"reports.daily_gross_revenue\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
