fix transformation code

--- a/etl_souce/transformation.ipynb
+++ b/etl_souce/transformation.ipynb
@@ -254,7 +254,7 @@
    "outputs": [],
    "source": [
     "pre_df = orders_df \\\n",
-    "    .filter(orders_df[\"created_at\"] == \"2019-09-13\") \\\n",
+    "    .filter(orders_df[\"created_at\"] == executionDate) \\\n",
     "    .join(order_detail_df, orders_df[\"id\"] == order_detail_df[\"order_id\"], \"inner\") \\\n",
     "    .join(products_df, orders_df[\"product_id\"] == products_df[\"id\"], \"inner\") \\\n",
     "    .join(inventory_df.select(f.col(\"quantity\").alias(\"inv_quantity\"), f.col(\"id\")), products_df[\"inventory_id\"] == inventory_df[\"id\"], \"inner\")"
