fix ingest data

--- a/etl_souce/ingestion.ipynb
+++ b/etl_souce/ingestion.ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "**Input** : `tblName` -> name of table to ingest data to HDFS, `executionDate` -> date to partition in DHFS Datalake <br>\n",
-    "**Output**: data in DHFS Datalake is updated\n",
+    "**Output**: data in DHFS Datalake is updated <br>\n",
+    "**Code Process**:\n",
     "- Load data from PostgreSQL in **tblName** table.\n",
     "- Update data in **tblName** folder with these below steps:  \n",
     "    - Get the lastest record_id in datalake (if **tblName** folder isn't empty) \n",
